fixed playlist tab overlap

--- a/src/components/PlaylistManager/PlaylistManager.css
+++ b/src/components/PlaylistManager/PlaylistManager.css
@@ -50,9 +50,10 @@
     }
 } */
 
-/*
+
 @media (min-device-width: 1224px) {
-    .playlist-main {
-        height: 600px;       
+    #playlist-tabs {
+        top: 64px;
+               
     }
-} */
+}
